# python-lms-tools

./: .travis.yml  README.md  pyproject.toml  setup.py
lms_tools/: __init__.py  base.py  formatter.py  version.py
lms_tools/aiken/: __init__.py  _utils.py  distractor.py  formatter.py  quiz.py
lms_tools/gift/: __init__.py  _utils.py  formatter.py  quiz.py
tests/: disabled_test_docx.py  test_aiken.py  test_gift.py
