[tool.poetry]
name = "python-lms-tools"
version = "0.1.0"
description = ""
authors = ["scls19fr <s.celles@gmail.com>"]
license = "MIT"
readme = "README.md"
#packages = [{include = "python_lms_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
yattag = "^1.15.1"
docx = "^0.2.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
